# zero_to_prod

./: .editorconfig  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
.cargo/: config.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.circleci/: config.testenv.sh  config.yml
.github/workflows/: global.yml
app/: Cargo.toml  build.rs
app-core/: Cargo.toml
app-core/src/: lib.rs  traits.rs
app/src/: lib.rs  main.rs  startup.rs
app/src/common/configuration/: logger.rs  open_api.rs
app/src/common/configuration/database/: mod.rs
app/src/common/utils/: mod.rs
app/src/models/subscription/: mod.rs
app/src/models/subscription/dtos/: mod.rs
app/src/modules/: mod.rs
app/src/modules/app/: controller.rs  mod.rs
app/src/modules/subscription/: controller.rs
app/tests/: health_checks.rs
macros/: Cargo.toml
macros/src/: lib.rs  main.rs
macros/tests/: lib.rs  test_controller.rs
migrations/2023-02-15-224538_subscriptions/: down.sql  up.sql
src/: lib.rs  main.rs  startup.rs
src/common/: mod.rs
src/common/configuration/: env.rs  logger.rs  mod.rs  open_api.rs
src/common/configuration/database/: mod.rs  postgres_config.rs
src/common/templates/: swagger.html
src/common/utils/: mod.rs
src/models/: subscription.rs
src/models/subscription/: mod.rs
src/models/subscription/dtos/: create_subscription.rs
src/modules/app/: mod.rs
src/modules/subscription/: controller.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_checks.rs
