[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ["Mihai Neagu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "serde_json", "uuid"] }
dotenvy = "0.15"
config = "0.13.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies.cargo-husky]
default-features = false
version = "1.5.0"
features = ["prepush-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-test"]
