[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.6.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"], default-features = false }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "serde_json", "uuid", "r2d2"] }
dotenvy = "0.15"
time = ">=0.2.23"
r2d2 = "0.8.10"
diesel_migrations = "2.0.0"
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter", "time"] }
tracing-log = "0.1.3"
once_cell = "1.17.1"
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
tower-http = { version = "0.4.0", features = ["trace"] }
hyper = "0.14.24"
app-core = { version = "0.1.0", path = "../app-core" }
macros = { version = "0.1.0", path = "../macros" }
regex = "1.7.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
regex = "1.7.1"
lazy_static = "1.4.0"
