[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
regex = "1.7.1"
axum = "0.6.9"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.109", features = ["full", "fold"]}
tower = "0.4.11"
lazy_static = "1.4.0"
app-core = { path = "../app-core" }

[features]
proc-macro-span = []
